--- a/mail/static/mail/styles.css
+++ b/mail/static/mail/styles.css
@@ -1,3 +1,44 @@
+body {
+  font-family: "Open Sans", sans-serif;
+}
+
 textarea {
-    min-height: 400px;
+  min-height: 400px;
+}
+
+/* EMAILS VIEWS */
+.mails {
+  display: flex;
+  justify-content: space-between;
+  border: 2px solid black;
+  padding: 10px 5px 10px 5px;
+  color: black;
+}
+
+.mail-title {
+  display: flex;
+}
+
+/* 
+ * Parragraph makes auto margin bottom
+ */
+.mail-title p {
+  margin-bottom: 0px;
+  font-weight: 500;
+}
+
+.mail-title b {
+  margin-right: 5px;
+  font-weight: 700;
+}
+
+.mail-timestamp i {
+  font-style: normal;
+  font-weight: 300;
+}
+
+/* EMAIL PREVIEW */
+.email-header {
+  list-style: none;
+  padding: 0;
 }
